2005-05-02  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c: (load_video_out_driver):
	Don't try to load the xxmc driver, it seems to cause more problems
	than anything... (Closes: #302734)

2005-05-02  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/backend/bacon-video-widget-gst.c:
	(bacon_video_widget_get_metadata_int):
	  Add missing break.

2005-05-01  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (update_fullscreen_size), (move_popups),
	(size_changed_cb): fix the exit fullscreen button not appearing on the
	right screen (Closes: #302418)

2005-05-01  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: fix build with --disable-mozilla, patch by
	William Jon McCann <mccann@jhu.edu> (Closes: #302217)

2005-04-30  Bastien Nocera  <hadess@hadess.net>

	* src/totem-properties-main.c: (totem_properties_get_pages):
	* src/totem-properties-view.c: (on_got_metadata_event),
	(totem_properties_view_init), (totem_properties_view_finalize),
	(totem_properties_view_new):
	* src/totem-properties-view.h: Give the nautilus tab a label that
	matches the file type (Closes: #172436)

2005-04-30  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (totem_lang_table_parse_start_tag),
	(totem_lang_get_full): also support iso-639-2 language names
	for the main benefit of Matroska (Closes: #301102)

2005-04-30  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_realize),
	(totem_playlist_map), (totem_playlist_unmap), (totem_playlist_new),
	(totem_playlist_class_init): add an map method and move the dialog
	where it was when we closed it (Closes: #300464)

2005-04-30  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (init_columns), (init_treeview):
	Remove the treeview header as it's not useful (Closes: #300463)

2005-04-28  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/backend/bacon-video-widget-gst.c:
	(bacon_video_widget_get_metadata_string):