@@ -1,3 +1,10 @@
+2005-05-05  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-statusbar.c: (totem_statusbar_create_window),
+	(totem_statusbar_destroy_window):
+	* src/totem-statusbar.h: Make the grip's default cursor be a resize
+	cursor (Closes: #303064)
+
 2005-05-02  Bastien Nocera  <hadess@hadess.net>
 
 	* src/backend/bacon-video-widget-xine.c: (load_video_out_driver):
